<resources>
    <string name="app_name">Screen Mirroring</string>
    <string name="connection_instructions">CONNECTION INSTRUCTIONS</string>
    <string name="text_step_1">Step 1: Smartphone and smart TV need to connect to the same WIFI network \n\n Step 2: Enable connection settings in smart TV\'s settings</string>
    <string name="text_step_2">Enable connection settings in smart TV\'s settings</string>
    <string name="text_step_3">Select the CONNECT button on the main screen</string>
    <string name="text_step_4">Select the select device button on the screen</string>
    <string name="text_step_5" />
    <string name="version">V1.0.0</string>
    <string name="version_app">Version:</string>
    <string name="advertisements_may_appear">(Advertisements may appear)</string>
    <string name="check_for_version">Check for new version…</string>
    <string name="screen_mirroring">SCREEN MIRRORING</string>
    <string name="checking_network">CHECKING NETWORK</string>
    <string name="stream_screen">SCREEN STREAM</string>
    <string name="check_signal_transmission">Check signal transmission</string>
    <string name="test_connection_speed">Test connection speed</string>
    <string name="check_the_connection_distance">Check the connection distance</string>
    <string name="start_now">Start now</string>
    <string name="next_screen">Next</string>
    <string name="default_title">No Wifi Connection</string>
    <string name="default_message">Check your Internet connection and try again.</string>
    <string name="please_turn_on">Please turn on</string>
    <string name="wifi">Wifi</string>
    <string name="no_advertising">No advertising</string>
    <string name="enjoy_an_amazing_ad_free_experience">Enjoy an amazing ad-free experience</string>
    <string name="buy_now">Buy Now</string>
    <string name="check_for_update">Check for update</string>
    <string name="more_apps">More apps</string>
    <string name="rate_us_5_stars">Rate us 5-stars</string>
    <string name="feedback_and_suggestions">Feedback and suggestions</string>
    <string name="buy_forever">Buy Forever</string>

<!--    Screen Name-->
    <string name="setting">SETTING</string>
    <string name="cast_video">VIDEO</string>
    <string name="cast_image">IMAGE</string>
    <string name="cast_youtube">YOUTUBE</string>
    <string name="cast_web">WEB</string>

    <string name="premium_full_version">Premium Full version</string>
    <string name="ready_connect">Ready Connect</string>
    <string name="say_no_with_advertising">Say NO with ADVERTISING</string>
    <string name="upgrade_to_the_ad_free_for_a_better_experience">Upgrade to the ad free for a better experience</string>
    <string name="disconnect">Disconnect</string>
    <string name="not_support_device">Device not supported</string>
    <string name="channel_id">channelID</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_upgrade_now">Upgrade Now</string>
    <string name="text_step">Step </string>
    <string name="next">Next</string>

    <string name="please_wait_to_load_data_dialog">Please wait to load data</string>
    <string name="this_action_may_contain_ads">This action may contain ads!</string>

    <string name="exit">Exit</string>
    <string name="sponsored">Sponsored</string>
    <string name="select_device">Select Device</string>
    <string name="ad_loading">ad loading</string>
    <string name="title_feedback">Feedback by Screen Mirroring</string>
    <string name="you_are_redirected_policy_page">You are redirected to the policy page</string>
    <string name="not_connect_wifi">Not Connect wifi</string>
    <string name="you_need_to_connect_to_the_wifi">You need to connect to the wifi that your tv connects to for the most stable connection</string>
    <string name="try_again">Try Again</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="loading_data">Loading Data</string>
    <string name="may_contain_advertising">May contain advertising</string>

    <string name="item_device_address">Device address:</string>
    <string name="item_device_address_description_open_address">Open address</string>
    <string name="item_device_address_description_copy_address">Copy address</string>
    <string name="item_device_address_description_share_address">Share address</string>
    <string name="item_device_address_description_qr_address">Show address as QR-code</string>

    <string name="stream_fragment_no_address">No address found</string>
    <string name="stream_fragment_interface">Interface: %1$s</string>

    <string name="permission_activity_error_title_activity_not_found">Permission dialog error</string>
    <string name="permission_activity_error_activity_not_found">Android bug. Don\'t check \"Don\'t show again\" at the rights request dialogue to capture the screen. If you already did so, reinstall the app.</string>
    <string name="permission_activity_cast_permission_required_title">Permission required</string>
    <string name="permission_activity_cast_permission_required">Screen Mirroring application requires Screen Cast permission to capture screen.</string>
    <string name="permission_activity_error_title">Error</string>
    <string name="permission_activity_error_unknown">Unknown error</string>
    <string name="stream_fragment_copied">Copied</string>

    <string name="error_title">Error</string>
    <string name="error_port_in_use">Port already in use. Choose another one.</string>
    <string name="error_invalid_media_projection">Security error: Invalid media projection. Try one more time.</string>
    <string name="error_ip_address_not_found">IP address not found.\nTry to disable \"Use WiFi only\" in settings.</string>
    <string name="error_wrong_image_format">System returns image in unknown format. No fix available. Sorry.</string>
    <string name="error_exit">Exit</string>

    <string name="guide_text_1">Connect to the same Wi-fi network and turn off the VPN</string>
    <string name="guide_text_2">Open this website on the other device</string>
    <string name="guide_text_3">Requires permission to capture screen</string>

<!--    dialog rate app-->

    <string name="good_rate_title">We like you too!</string>
    <string name="good_rate_description">Thanks for your feedback!</string>
    <string name="medium_rate_description">Please leave us some feedback!</string>
    <string name="rate_us">Rate us</string>
    <string name="bad_rate_title">Oh, No!</string>
    <string name="appreciate_rating_us">We are working hard to provide a better user experience. We really appreciate you rating us.</string>
    <string name="rate_us_on_google_play">Rate us on google play</string>
    <string name="the_best_we_could_get">The best we could get :)</string>
    <string name="ask_again_later">Ask again later</string>

    <string name="dialog_feature_comming_soon">This feature is comming soon</string>
    <string name="dialog_description_feature">We are developing this feature in the next version</string>
    <string name="stream_http">Mirror to browser</string>
    <string name="screen_mirror">Screen Mirror</string>
    <string name="video">Video</string>
    <string name="image">Image</string>
    <string name="web">Web</string>
    <string name="youtube">Youtube</string>
    <string name="text_guide">Guide</string>
    <string name="experience_mirroring_with_powerful_tools">Experience Mirroring with powerful tools</string>
</resources>