<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg">

    <ImageView
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_logo_screen"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="170dp"
        android:layout_height="87dp"/>
    <TextView
        android:id="@+id/text_check_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_for_version"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/progress_splash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_splash"
        android:layout_width="match_parent"
        android:padding="16dp"
        android:progress="50"
        app:indicatorColor="@color/color_progress"
        app:trackColor="@color/color_progress_transparent"
        app:trackThickness="10dp"
        app:trackCornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/text_advertment"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/text_advertment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/advertisements_may_appear"
        android:textColor="@color/color_text_grey"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text_version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:text="@string/version"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>